Add settings page and UI improvements